# SevenSegmentClock

./: .gitignore  CMakeLists.txt  README.md  main.cpp
header/: clock.hpp  display.h  displayhelper.h  doubledigitdisplay.h  hour.h  minute.h  segment.h  timer.h
source/: display.cpp  segment.cpp
src/: display.cpp  display.h  displayhelper.h  doubledigitdisplay.h  segment.cpp  timer.h
